[HT-224-admin-ui] Collapsing formatting options. Fixing some styling issues with paragraphs. Dividers between draggable rows. Moving field help after label but before input.

--- a/health_adminimal/customisations.css
+++ b/health_adminimal/customisations.css
@@ -21,9 +21,10 @@ body.adminimal-skin-material table.ui-datepicker-calendar thead th {
 }
 
 /* Making all button text white instead of grey, in line with other buttons */
+a.button:link, a.button:visited, a.button:hover, a.button:active,
 a.button.browse:link, a.button.browse:visited, a.button.browse:hover, a.button.browse:active,
 a.button.edit:link, a.button.edit:visited, a.button.edit:hover, a.button.edit:active {
-    color: white;
+    color: white !important;
     margin-right: 1em;
     padding: 5px 18px;
     margin-top: -2px;
@@ -61,4 +62,41 @@ a.button.edit:link, a.button.edit:visited, a.button.edit:hover, a.button.edit:ac
 }
 .cke_dialog_footer_buttons a.cke_dialog_ui_button:not(.cke_dialog_ui_button_ok) span{
     color: white;
+}
+
+/* Formatting information filter wrapper */
+body.adminimal-skin-material fieldset.filter-wrapper {
+    height: auto;
+    padding-top: 26px;
+}
+body.adminimal-skin-material fieldset.filter-wrapper legend {
+    font-size: 14px;
+    margin-left: 1px;
+    top: 8px;
+}
+
+/* Fixing issues with styles being applied to links inside a table (paragraph) */
+body.adminimal-skin-material fieldset.filter-wrapper legend a {
+    padding: 0;
+}
+body.adminimal-theme a.cke_combo_button {
+    padding: 0;
+}
+body.adminimal-theme a.cke_button {
+    padding: 4px 6px;
+}
+
+/* Provide a divider between paragraph tables */
+body.adminimal-skin-material tr.draggable {
+    border-bottom: 1px solid #E0E0E0;
+}
+
+/* Adjust the padding around fieldset descriptions as it was too big */
+body.adminimal-skin-material .fieldset-wrapper .fieldset-description {
+    padding: 0 0 15px 0;
+}
+
+/* Hide the toggle to swap between dragging and weight selection */
+.tabledrag-toggle-weight-wrapper {
+    display: none;
 }
